# stock-price-predictor

./: .$Diagrama.drawio.bkp  .env-example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/pipelines/forecasting/notebooks/: finance.ipynb
backend/pipelines/web_scraper/notebooks/: webscrapper.ipynb
info/: Diagrama.drawio
nginx/: Dockerfile  nginx.conf.template
